# zapomnigo-backend

./: .env  .env.sample  .gitconfig  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  health_check.sh  main.js  package-lock.json  package.json  pyproject.toml
docs/: ENDPOINTS.md
resources/docs/: CATEGORIES.md  ENDPOINTS.md  FLASHCARDS.md  FOLDERS.md  SETS.md  SUBCATEGORIES.md  USERS.md  UTILITIES.md
resources/email_templates/: BG_ChangedEmail.html  BG_ChangedPassword.html  BG_DeletedAccount.html  BG_ResetPassword.html  BG_VerifyEmail.html
shared/: README.md
src/: app.py  config.py  main.py
src/auth/: jwt_creation.py  jwt_decorators.py
src/celery_task_queue/: initializer.py  make_celery.py
src/controllers/: __init__.py  categories_controller.py  flashcards_contoller.py  folders_controller.py  organization_controller.py  sets_controller.py  subcategories_controller.py  subscription_models_controller.py  users_controller.py  utility_controller.py  verification_controller.py
src/database/: __init__.py  database_transaction_handlers.py
src/functionality/: common.py  folders_functionallity.py  mailing_functionality.py  sets_functionality.py  users_functionallity.py
src/pydantic_models/: __init__.py  categories_model.py  common.py  flashcards_model.py  folders_model.py  login_model.py  mail_sender_model.py  organization_model.py  registration_model.py  reset_password_model.py  sets_model.py  subscription_model.py  subscriptions_model.py  users_models.py
src/routes/: __init__.py  categories_routes.py  flashcards.py  folders_routes.py  (+8 more)
translations/: translation.bg-BG.json  translation.en-US.json
utils/: dbConfig.js  passwordValidator.js
v1_routes/: folders.js  sets.js  utils.js
(+68 files in other folders)
