[tool.poetry]
name = "mesembria"
version = "0.1.0"
description = "mesembria python api"
authors = ["Ivan Obreshkov <ivanobreshkov12@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
